--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "barber-be",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "This is a backend for de barber shop",
   "main": "index.js",
   "scripts": {
@@ -12,20 +12,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
-    "resend": "^4.0.1"
+    "resend": "^4.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.10.1",
+    "@types/node-fetch": "^3.0.2",
     "nodemon": "^3.1.7",
-    "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   }
 }
